# itc2026

./: .gitignore
backend/: .gitignore  README.md  api_docs.yaml  pyproject.toml
backend/run/: .env  Dockerfile
backend/src/app/: bootstrap.py  config.py  main.py
backend/src/app/di/: container.py
backend/src/app/entities/: __init__.py  access_token.py  comment.py  comment_status.py  document.py  document_detail.py  document_user_status.py  review.py  review_status.py  stage.py  stage_reviewer.py  stage_with_reviewer_and_docs.py  user.py  user_notification.py
backend/src/app/handlers/: base.py  oauth_token_post.py  v1_auth_authenticate_post.py  v1_cabinet_client_get.py  v1_cabinet_document_comments_all_get.py  v1_cabinet_document_comments_get.py  v1_cabinet_document_comments_post.py  v1_cabinet_document_file_get.py  v1_cabinet_document_file_post.py  v1_cabinet_document_get.py  v1_cabinet_document_move_post.py  v1_cabinet_document_pdf_file_get.py  v1_cabinet_documents_comment_patch.py  v1_cabinet_me_get.py  v1_cabinet_notification_read_post.py  v1_cabinet_notifications_unread_get.py  v1_cabinet_reviews_pdf_post.py  v1_cabinet_reviews_post.py  v1_cabinet_stages_get.py  v1_cabinet_users_get.py  v1_cabinett_document_comments.py  v1_change_doc_stage_post.py  v1_stages_list_get.py  v1_user_notifications_post.py
backend/src/app/repositories/: client_inmemory_repo.py  inmemory_comments_repo.py  inmemory_document_files_repo.py  inmemory_document_repo.py  inmemory_reviews_repo.py  inmemory_stage_reviewers_repo.py  inmemory_stages_repo.py  inmemory_user_repo.py  (+1 more)
(+169 files in other folders)
